@@ -838,6 +838,8 @@
 
 <p><a href="func.html#round">ROUND</a> function</p>
 
+<p><a href="func.html#round_to">ROUND_TO</a> function</p>
+
 <p><a href="func.html#rtrim">RTRIM</a> function</p>
 
 <p><a href="cmds.html#run">run</a> command</p>
